examples/test/testpolicy7200.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7200
  namespace: namespace207
spec:
  podSelector:
    matchLabels:
      key32: value37
      key49: value21
      key11: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value33
          key46: value6
      podSelector:
        matchLabels:
          key38: value24
